--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,69 @@
 {{ define "main" }}
-<main class="container mx-auto px-4 py-24 bg-gray-100">
-    <h1 class="text-3xl underline decoration-pink-500" >Welcome to Hugo with Tailwind CSS</h1>
-    <div class="text-blue-500 text-2xl">This is an example site with TailwindCSS 3.0</div>
-    <div class="text-cyan-700 text-6xl ">This is 6xl in Cyan</div>
-    <div class="text-orange-800 text-4xl ">
-Just added, an example page with some @tailwindcss/typography stylings for markdown -> <a class="text-indigo-400 hover:text-indigo-700 font-bold" href="/prose/"]>/prose/</a>.    </div>
+<main class="flex flex-col bg-gray-100 min-w-[20rem]">
+  <header class="bg-sky-800 text-gray-200">
+    <nav class="m-8 flex flex-row justify-evenly">
+      <a class="">HOME</a>
+      <a>SERVICES</a>
+      <a>LOCATION</a>
+      <a>CONTACT</a>
+    </nav>
+    <section class="flex flex-col mx-auto md:flex-row md:min-h-[40rem] lg:max-w-5xl items-center content-center justify-items-center">
+      <div class="mx-6 my-20 basis-1/3 text-center">LOGO SVG</div>
+      <div class="m-6 basis-2/3">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut risus purus. Morbi vulputate, nibh et dapibus aliquam, eros urna mollis est, non facilisis ipsum felis a erat. Ut dui est, convallis quis odio vitae, finibus eleifend libero. Etiam quis elit eu elit dignissim sodales sit amet vel ex. Praesent efficitur tristique imperdiet. Cras id accumsan nulla. Pellentesque nec augue mi.
+      </div>
+    </section>
+  </header>
+  <section class="bg-yellow-600 text-gray-200">
+    <div class="grid md:grid-cols-3 md:grid-rows-1 md:max-w-5xl md:mx-auto md:min-h-[16rem] items-center">
+      <div class="px-6 py-10 bg-yellow-600 md:h-full md:flex md:items-center">
+        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui. 
+      </div>
+      <div class="px-6 py-10 bg-yellow-600 md:h-full md:flex md:items-center">
+        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui. 
+      </div>
+      <div class="px-6 py-10 bg-yellow-600 md:h-full md:flex md:items-center">
+        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui. 
+      </div>
+    </div>
+  </section>
+  <section class="py-10 bg-slate-200 text-gray-800">
+    <h2 class="text-2xl leading-loose text-center">Services</h2>
+    <div class="m-6 grid gap-6 md:grid-cols-2 md:max-w-5xl md:mx-auto md:px-6">
+      <div class="">
+        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui. 
+      </div>
+      <div class="">
+        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui. 
+      </div>
+      <div class="">
+        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui. 
+      </div>
+      <div class="">
+        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui. 
+      </div>
+    </div>
+  </section>
+  <section class="bg-slate-700 text-gray-200">
+    <div class="flex flex-col md:flex-row md:max-w-5xl md:mx-auto md:min-h-[32rem]">
+      <div class="text-gray-200 mx-6 my-10 self-center w-1/3">
+        <h2 class="text-2xl leading-loose text-center md:text-right">Visit us at</h2>
+        <p class="my-6 leading-relaxed md:text-right">Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.</p>
+      </div>
+      <div class="w-2/3 bg-amber-700 min-h-[20rem]">
+        MAP
+      </div>
+    </div>
+  </section>
+  <section class="p-8 py-10 bg-slate-200">
+    <h2 class="text-2xl leading-loose text-center">Contact</h2>
+    <div class="md:max-w-3xl md:mx-auto">
+      Text
+    </div>
+  </section>
+  <footer class="p-8 py-10 bg-slate-800 text-gray-200">
+    <p class="text-sm text-center">&copy; 2022 | Made with Hugo and Tailwind CSS</p>
+  </footer>
 </main>
 {{ end }}
+  
