--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,23 +7,27 @@
       <a>LOCATION</a>
       <a>CONTACT</a>
     </nav>
-    <section class="flex flex-col mx-auto md:flex-row md:min-h-[40rem] lg:max-w-5xl items-center content-center justify-items-center">
+    <section
+      class="flex flex-col mx-auto md:flex-row md:min-h-[40rem] lg:max-w-5xl items-center content-center justify-items-center">
       <div class="mx-6 my-20 basis-1/3 text-center">LOGO SVG</div>
       <div class="m-6 basis-2/3">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut risus purus. Morbi vulputate, nibh et dapibus aliquam, eros urna mollis est, non facilisis ipsum felis a erat. Ut dui est, convallis quis odio vitae, finibus eleifend libero. Etiam quis elit eu elit dignissim sodales sit amet vel ex. Praesent efficitur tristique imperdiet. Cras id accumsan nulla. Pellentesque nec augue mi.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut risus purus. Morbi vulputate, nibh et dapibus
+        aliquam, eros urna mollis est, non facilisis ipsum felis a erat. Ut dui est, convallis quis odio vitae, finibus
+        eleifend libero. Etiam quis elit eu elit dignissim sodales sit amet vel ex. Praesent efficitur tristique
+        imperdiet. Cras id accumsan nulla. Pellentesque nec augue mi.
       </div>
     </section>
   </header>
-  <section class="bg-yellow-600 text-gray-200">
+  <section class="bg-blue-600 text-gray-200">
     <div class="grid md:grid-cols-3 md:grid-rows-1 md:max-w-5xl md:mx-auto md:min-h-[16rem] items-center">
-      <div class="px-6 py-10 bg-yellow-600 md:h-full md:flex md:items-center">
-        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui. 
+      <div class="px-6 py-10 md:h-full md:flex md:items-center">
+        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.
       </div>
-      <div class="px-6 py-10 bg-yellow-600 md:h-full md:flex md:items-center">
-        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui. 
+      <div class="px-6 py-10 md:h-full md:flex md:items-center">
+        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.
       </div>
-      <div class="px-6 py-10 bg-yellow-600 md:h-full md:flex md:items-center">
-        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui. 
+      <div class="px-6 py-10 md:h-full md:flex md:items-center">
+        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.
       </div>
     </div>
   </section>
@@ -31,16 +35,16 @@
     <h2 class="text-2xl leading-loose text-center">Services</h2>
     <div class="m-6 grid gap-6 md:grid-cols-2 md:max-w-5xl md:mx-auto md:px-6">
       <div class="">
-        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui. 
+        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.
       </div>
       <div class="">
-        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui. 
+        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.
       </div>
       <div class="">
-        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui. 
+        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.
       </div>
       <div class="">
-        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui. 
+        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.
       </div>
     </div>
   </section>
@@ -48,7 +52,8 @@
     <div class="flex flex-col md:flex-row md:max-w-5xl md:mx-auto md:min-h-[32rem]">
       <div class="text-gray-200 mx-6 my-10 self-center w-1/3">
         <h2 class="text-2xl leading-loose text-center md:text-right">Visit us at</h2>
-        <p class="my-6 leading-relaxed md:text-right">Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.</p>
+        <p class="my-6 leading-relaxed md:text-right">Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras
+          ac semper mauris, vitae posuere dui.</p>
       </div>
       <div class="w-2/3 bg-amber-700 min-h-[20rem]">
         MAP
@@ -66,4 +71,3 @@
   </footer>
 </main>
 {{ end }}
-  
