--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
-<main class="flex flex-col bg-gray-100 min-w-[20rem]">
-  <header class="bg-sky-800 text-gray-200">
+<main class="flex flex-col bg-gainsboro min-w-[20rem]">
+  <header class="bg-stone-500 text-gray-200">
     <nav class="m-8 flex flex-row justify-evenly">
       <a class="">HOME</a>
       <a>SERVICES</a>
@@ -18,7 +18,7 @@
       </div>
     </section>
   </header>
-  <section class="bg-blue-600 text-gray-200">
+  <section class="bg-lt-blue text-gray-200">
     <div class="grid md:grid-cols-3 md:grid-rows-1 md:max-w-5xl md:mx-auto md:min-h-[16rem] items-center">
       <div class="px-6 py-10 md:h-full md:flex md:items-center">
         Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.
@@ -31,7 +31,7 @@
       </div>
     </div>
   </section>
-  <section class="py-10 bg-slate-200 text-gray-800">
+  <section class="py-10 text-gray-800">
     <h2 class="text-2xl leading-loose text-center">Services</h2>
     <div class="m-6 grid gap-6 md:grid-cols-2 md:max-w-5xl md:mx-auto md:px-6">
       <div class="">
@@ -48,19 +48,19 @@
       </div>
     </div>
   </section>
-  <section class="bg-slate-700 text-gray-200">
+  <section class="bg-blue text-gray-200">
     <div class="flex flex-col md:flex-row md:max-w-5xl md:mx-auto md:min-h-[32rem]">
-      <div class="text-gray-200 mx-6 my-10 self-center w-1/3">
+      <div class="text-gray-200 mx-6 my-10 w-full self-center md:w-1/3">
         <h2 class="text-2xl leading-loose text-center md:text-right">Visit us at</h2>
         <p class="my-6 leading-relaxed md:text-right">Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras
           ac semper mauris, vitae posuere dui.</p>
       </div>
-      <div class="w-2/3 bg-amber-700 min-h-[20rem]">
+      <div class="w-full md:w-2/3 bg-stone-500 min-h-[20rem]">
         MAP
       </div>
     </div>
   </section>
-  <section class="p-8 py-10 bg-slate-200">
+  <section class="p-8 py-10">
     <h2 class="text-2xl leading-loose text-center">Contact</h2>
     <div class="md:max-w-3xl md:mx-auto">
       Text
