--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,69 +1,90 @@
 {{ define "main" }}
-<main class="flex flex-col bg-gainsboro min-w-[20rem]">
+<main class="flex flex-col bg-gainsboro min-w-[20rem] font-light text-lg">
   <header class="bg-stone-500 text-gray-200">
     <nav class="m-8 flex flex-row justify-evenly">
       <a class="">HOME</a>
       <a>SERVICES</a>
       <a>LOCATION</a>
-      <a>CONTACT</a>
+      <a>GALLERY</a>
     </nav>
     <section
-      class="flex flex-col mx-auto md:flex-row md:min-h-[40rem] lg:max-w-5xl items-center content-center justify-items-center">
-      <div class="mx-6 my-20 basis-1/3 text-center">LOGO SVG</div>
-      <div class="m-6 basis-2/3">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut risus purus. Morbi vulputate, nibh et dapibus
-        aliquam, eros urna mollis est, non facilisis ipsum felis a erat. Ut dui est, convallis quis odio vitae, finibus
-        eleifend libero. Etiam quis elit eu elit dignissim sodales sit amet vel ex. Praesent efficitur tristique
-        imperdiet. Cras id accumsan nulla. Pellentesque nec augue mi.
+      class="flex flex-col mx-auto md:flex-row md:min-h-[50rem] lg:max-w-5xl items-center content-center justify-items-center">
+      <div class="mx-6 my-20 basis-1/3 text-center">
+        LOGO
+      </div>
+      <div class="m-6 basis-2/3 md:text-2xl">
+        <span class="text-xl md:text-3xl font-bold">Road 12 Auto Electrical Services</span> is your friendly neighborhood shop for all your auto electrical servicing and repairs. We offer a wide range of electrical services from general wiring, wiring harness restoration to troubleshooting.
       </div>
     </section>
   </header>
   <section class="bg-lt-blue text-gray-200">
     <div class="grid md:grid-cols-3 md:grid-rows-1 md:max-w-5xl md:mx-auto md:min-h-[16rem] items-center">
-      <div class="px-6 py-10 md:h-full md:flex md:items-center">
-        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.
+      <div class="px-6 py-10 md:h-full md:flex md:flex-col md:items-center md:justify-start">
+        <h2 class="text-xl leading-loose">Contact us</h2>
+        <p class="text-2xl font-bold">0955 224 9140</p>
+        <p class="mb-2 text-xl italic">Arvin</p>
+        <p class="text-2xl font-bold">0998 209 8565</p>
+        <p class="mb-2 text-xl italic">Jun</p>
+        <p class="text-2xl font-bold">0916 501 8660</p>
+        <p class="text-xl italic">Flor</p>
       </div>
-      <div class="px-6 py-10 md:h-full md:flex md:items-center">
-        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.
+      <div class="bg-lt-blue-500 px-6 py-10 md:h-full md:flex md:flex-col md:items-center md:justify-start">
+        <h2 class="text-xl leading-loose">Business hours</h2>
+        <p class="text-2xl font-bold">8 AM &ndash; 5 PM</p>
+        <p class="mb-2 text-xl">Monday to Sunday</p>
       </div>
-      <div class="px-6 py-10 md:h-full md:flex md:items-center">
-        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.
+      <div class="px-6 py-10 md:h-full md:flex md:flex-col md:items-center md:justify-start">
+        <h2 class="text-xl leading-loose">Location</h2>
+        <p class="mb-2 text-xl font-bold">2157 Road 12, Fabie Estate<br/>San Andres Bukid, Manila</p>
       </div>
     </div>
   </section>
   <section class="py-10 text-gray-800">
-    <h2 class="text-2xl leading-loose text-center">Services</h2>
-    <div class="m-6 grid gap-6 md:grid-cols-2 md:max-w-5xl md:mx-auto md:px-6">
+    <div class="mx-6 grid gap-10 md:gap-14 md:grid-cols-2 md:max-w-5xl md:mx-auto md:px-6">
       <div class="">
-        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.
+        <h2 class="text-2xl leading-loose font-medium">Services provided</h2>
+        <p>
+          General wiring<br/>
+          Wiring harness restoration<br/>
+          Troubleshooting<br/>
+          Starter<br/>
+          Alternator<br/>
+          Electric motor rewinding<br/>
+        </p>
       </div>
       <div class="">
-        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.
+        <h2 class="text-2xl leading-loose font-medium">Free estimate</h2>
+        <p>Not sure what the problem is? Contact us and we'll troubleshoot the issue. Want to know the costs before jumping into the repair? We'll give you an estimate for free.</p>
       </div>
       <div class="">
-        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.
+        <h2 class="text-2xl leading-loose font-medium">Electrical appliances</h2>
+        <p>Faulty or broken home appliances? Electric fans, washing machines&mdash;hey, as long as they run on electricity
+          <span class="text-sm">(and not on some Wakandan Vibranium or an infinity stone)</span> we'll fix it for you.
+        </p>
       </div>
       <div class="">
-        Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras ac semper mauris, vitae posuere dui.
+        <h2 class="text-2xl leading-loose font-medium">Home service</h2>
+        <p>Near the area but unable to bring your car/appliance to the shop? We'll come and bring our services to your home</p>
       </div>
     </div>
   </section>
   <section class="bg-blue text-gray-200">
     <div class="flex flex-col md:flex-row md:max-w-5xl md:mx-auto md:min-h-[32rem]">
       <div class="text-gray-200 mx-6 my-10 w-full self-center md:w-1/3">
-        <h2 class="text-2xl leading-loose text-center md:text-right">Visit us at</h2>
-        <p class="my-6 leading-relaxed md:text-right">Quisque eget risus faucibus, eleifend augue a, lobortis erat. Cras
-          ac semper mauris, vitae posuere dui.</p>
+        <h2 class="mx-6 text-2xl leading-loose md:text-right md:m-0 font-medium">Visit us at</h2>
+        <p class="mx-6 leading-relaxed md:text-right md:m-0">2157 Road 12<br/>Fabie Estate<br/>San Andres Bukid, Manila</p>
       </div>
       <div class="w-full md:w-2/3 bg-stone-500 min-h-[20rem]">
         MAP
       </div>
     </div>
   </section>
-  <section class="p-8 py-10">
-    <h2 class="text-2xl leading-loose text-center">Contact</h2>
-    <div class="md:max-w-3xl md:mx-auto">
-      Text
+  <section class="py-10">
+    <div class="md:max-w-5xl md:mx-auto md:min-h-[20rem]">
+      <h2 class="mx-6 text-2xl leading-loose md:text-center font-medium">Gallery</h2>
+      <div class="mx-6 md:max-w-3xl md:mx-auto">
+        photos
+      </div>
     </div>
   </section>
   <footer class="p-8 py-10 bg-slate-800 text-gray-200">
