Add logo, improve some spacing

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,16 +9,18 @@
     </nav>
     <section
       class="flex flex-col mx-auto md:flex-row md:min-h-[50rem] lg:max-w-5xl items-center content-center justify-items-center">
-      <div class="mx-6 my-20 basis-1/3 text-center">
-        LOGO
+      <div class="mx-6 my-20 w-1/2 sm:w-1/3 md:basis-1/3 text-center">
+        <object type="image/svg+xml" data="/images/road12-logo.svg" class="logo">
+          Road 12 Logo
+        </object>
       </div>
-      <div class="m-6 basis-2/3 md:text-2xl">
+      <div class="m-6 my-10 md:basis-2/3 md:text-2xl text-center md:text-left">
         <span class="text-xl md:text-3xl font-bold">Road 12 Auto Electrical Services</span> is your friendly neighborhood shop for all your auto electrical servicing and repairs. We offer a wide range of electrical services from general wiring, wiring harness restoration to troubleshooting.
       </div>
     </section>
   </header>
   <section class="bg-lt-blue text-gray-200">
-    <div class="grid md:grid-cols-3 md:grid-rows-1 md:max-w-5xl md:mx-auto md:min-h-[16rem] items-center">
+    <div class="grid md:grid-cols-3 md:grid-rows-1 md:max-w-5xl md:mx-auto md:min-h-[16rem] text-center">
       <div class="px-6 py-10 md:h-full md:flex md:flex-col md:items-center md:justify-start">
         <h2 class="text-xl leading-loose">Contact us</h2>
         <p class="text-2xl font-bold">0955 224 9140</p>
@@ -70,7 +72,7 @@
   </section>
   <section class="bg-blue text-gray-200">
     <div class="flex flex-col md:flex-row md:max-w-5xl md:mx-auto md:min-h-[32rem]">
-      <div class="text-gray-200 mx-6 my-10 w-full self-center md:w-1/3">
+      <div class="text-gray-200 mx-6 my-10 w-full self-center text-center md:w-1/3">
         <h2 class="mx-6 text-2xl leading-loose md:text-right md:m-0 font-medium">Visit us at</h2>
         <p class="mx-6 leading-relaxed md:text-right md:m-0">2157 Road 12<br/>Fabie Estate<br/>San Andres Bukid, Manila</p>
       </div>
