--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,7 +22,7 @@
   <section class="bg-lt-blue text-gray-200">
     <div class="grid md:grid-cols-3 md:grid-rows-1 md:max-w-5xl md:mx-auto md:min-h-[16rem] text-center">
       <div class="px-6 py-10 md:h-full md:flex md:flex-col md:items-center md:justify-start">
-        <h2 class="text-xl leading-loose">Contact us</h2>
+        <h2 class="text-xl leading-loose font-medium">Contact us</h2>
         <p class="text-2xl font-bold">0955 224 9140</p>
         <p class="mb-2 text-xl italic">Arvin</p>
         <p class="text-2xl font-bold">0998 209 8565</p>
@@ -31,12 +31,12 @@
         <p class="text-xl italic">Flor</p>
       </div>
       <div class="bg-lt-blue-500 px-6 py-10 md:h-full md:flex md:flex-col md:items-center md:justify-start">
-        <h2 class="text-xl leading-loose">Business hours</h2>
+        <h2 class="text-xl leading-loose font-medium">Business hours</h2>
         <p class="text-2xl font-bold">8 AM &ndash; 5 PM</p>
         <p class="mb-2 text-xl">Monday to Sunday</p>
       </div>
       <div class="px-6 py-10 md:h-full md:flex md:flex-col md:items-center md:justify-start">
-        <h2 class="text-xl leading-loose">Location</h2>
+        <h2 class="text-xl leading-loose font-medium">Location</h2>
         <p class="mb-2 text-xl font-bold">2157 Road 12, Fabie Estate<br/>San Andres Bukid, Manila</p>
       </div>
     </div>
@@ -56,7 +56,7 @@
       </div>
       <div class="">
         <h2 class="text-2xl leading-loose font-medium">Free estimate</h2>
-        <p>Not sure what the problem is? Contact us and we'll troubleshoot the issue. Want to know the costs before jumping into the repair? We'll give you an estimate for free.</p>
+        <p>Not sure what the problem is? Contact us and we'll troubleshoot the issue. Want to know the costs before jumping into the repair? We'll give you an estimate <span class="font-bold">for free.</span></p>
       </div>
       <div class="">
         <h2 class="text-2xl leading-loose font-medium">Electrical appliances</h2>
