--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -908,11 +908,6 @@ html {
   margin-bottom: 2.5rem;
 }
 
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -933,24 +928,16 @@ html {
   min-height: 20rem;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-1\/2 {
   width: 50%;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .min-w-\[20rem\] {
   min-width: 20rem;
-}
-
-.basis-1\/3 {
-  flex-basis: 33.333333%;
-}
-
-.basis-2\/3 {
-  flex-basis: 66.666667%;
 }
 
 .flex-row {
@@ -1000,19 +987,32 @@ html {
   background-color: rgb(39 123 186 / var(--tw-bg-opacity));
 }
 
+.bg-lt-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 104 158 / var(--tw-bg-opacity));
+}
+
 .bg-blue {
   --tw-bg-opacity: 1;
   background-color: rgb(57 42 163 / var(--tw-bg-opacity));
 }
 
-.bg-slate-800 {
+.bg-neutral-red {
   --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+  background-color: rgb(173 155 170 / var(--tw-bg-opacity));
 }
 
-.bg-lt-blue-500 {
+.bg-slate-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(33 104 158 / var(--tw-bg-opacity));
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-center {
+  background-position: center;
 }
 
 .p-8 {
@@ -1082,13 +1082,14 @@ html {
   line-height: 1.625;
 }
 
-.leading-6 {
-  line-height: 1.5rem;
-}
-
 .text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-gray-800 {
