--- a/layouts/index.html
+++ b/layouts/index.html
@@ -80,7 +80,7 @@
         <p class="mx-6 leading-relaxed md:text-right md:m-0">2157 Road 12<br/>Fabie Estate<br/>San Andres Bukid, Manila</p>
       </div>
       <div class="w-full md:w-2/3 bg-stone-500 min-h-[20rem]">
-        MAP
+        {{ partial "map.html" . }}
       </div>
     </div>
   </section>
