--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -916,6 +916,10 @@ html {
   display: block;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 .flex {
   display: flex;
 }
@@ -1005,14 +1009,14 @@ html {
   background-color: rgb(57 42 163 / var(--tw-bg-opacity));
 }
 
-.bg-neutral-red {
-  --tw-bg-opacity: 1;
-  background-color: rgb(173 155 170 / var(--tw-bg-opacity));
-}
-
 .bg-slate-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
+.bg-red {
+  --tw-bg-opacity: 1;
+  background-color: rgb(161 48 52 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -1066,6 +1070,21 @@ html {
   line-height: 1;
 }
 
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
+}
+
 .font-light {
   font-weight: 300;
 }
@@ -1110,6 +1129,21 @@ html {
   color: rgb(21 94 117 / var(--tw-text-opacity));
 }
 
+.text-blue {
+  --tw-text-opacity: 1;
+  color: rgb(57 42 163 / var(--tw-text-opacity));
+}
+
+.text-lt-blue {
+  --tw-text-opacity: 1;
+  color: rgb(39 123 186 / var(--tw-text-opacity));
+}
+
+.text-red {
+  --tw-text-opacity: 1;
+  color: rgb(161 48 52 / var(--tw-text-opacity));
+}
+
 .prose-a\:text-pink-700 :is(:where(a):not(:where([class~="not-prose"] *))) {
   --tw-text-opacity: 1;
   color: rgb(190 24 93 / var(--tw-text-opacity));
@@ -1134,6 +1168,11 @@ html {
   .md\:mx-auto {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .md\:my-6 {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
   }
 
   .md\:flex {
@@ -1216,9 +1255,22 @@ html {
     gap: 3.5rem;
   }
 
+  .md\:gap-16 {
+    gap: 4rem;
+  }
+
+  .md\:gap-20 {
+    gap: 5rem;
+  }
+
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .md\:py-14 {
+    padding-top: 3.5rem;
+    padding-bottom: 3.5rem;
   }
 
   .md\:text-left {
