--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="{{ .Language.Lang }}">
+
 <head>
-    {{ partial "head.html" . }}
+  {{ partial "head.html" . }}
 </head>
+
 <body>
-{{ block "main" . }}{{ end }}
+  {{ block "main" . }}{{ end }}
+  {{ partial "ionicons.html" . }}
 </body>
+
 </html>
