--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,10 +22,13 @@
       </div>
     </section>
   </header>
-  <section class="bg-lt-blue text-gray-200">
+  <section class="bg-blue text-gray-200">
     <div class="grid md:grid-cols-3 md:grid-rows-1 md:max-w-5xl md:mx-auto md:min-h-[16rem] text-center">
       <div class="px-6 py-10 md:h-full md:flex md:flex-col md:items-center md:justify-start">
-        <h2 class="text-xl leading-loose font-medium">Contact us</h2>
+        <h2 class="text-xl leading-loose font-medium">
+          <ion-icon name="call" class="text-lt-blue text-4xl block mx-auto"></ion-icon>
+          Contact us
+        </h2>
         <p class="text-2xl font-bold">0955 224 9140</p>
         <p class="mb-2 text-xl italic">Arvin</p>
         <p class="text-2xl font-bold">0998 209 8565</p>
@@ -33,20 +36,27 @@
         <p class="text-2xl font-bold">0916 501 8660</p>
         <p class="text-xl italic">Flor</p>
       </div>
-      <div class="bg-lt-blue-500 px-6 py-10 md:h-full md:flex md:flex-col md:items-center md:justify-start">
-        <h2 class="text-xl leading-loose font-medium">Business hours</h2>
+      <div class="bg-lt-blue px-6 py-10 md:h-full md:flex md:flex-col md:items-center md:justify-start">
+        <h2 class="text-xl leading-loose font-medium">
+          <ion-icon name="time" class="text-blue text-4xl block mx-auto"></ion-icon>
+          Business hours
+        </h2>
         <p class="text-2xl font-bold">8 AM &ndash; 5 PM</p>
         <p class="mb-2 text-xl">Monday to Sunday</p>
       </div>
       <div class="px-6 py-10 md:h-full md:flex md:flex-col md:items-center md:justify-start">
-        <h2 class="text-xl leading-loose font-medium">Location</h2>
+        <h2 class="text-xl leading-loose font-medium">
+          <ion-icon name="location" class="text-lt-blue text-4xl block mx-auto"></ion-icon>
+          Location
+        </h2>
         <p class="mb-2 text-xl font-bold">2157 Road 12, Fabie Estate<br/>San Andres Bukid, Manila</p>
       </div>
     </div>
   </section>
-  <section class="py-10 text-gray-800">
-    <div class="mx-6 grid gap-10 md:gap-14 md:grid-cols-2 md:max-w-5xl md:mx-auto md:px-6">
+  <section class="py-10 md:py-14 text-gray-800">
+    <div class="mx-6 grid gap-10 md:gap-20 md:my-6 md:grid-cols-2 md:max-w-5xl md:mx-auto md:px-6">
       <div class="">
+        <ion-icon name="car" class="text-red text-5xl block"></ion-icon>
         <h2 class="text-2xl leading-loose font-medium">Services provided</h2>
         <p>
           General wiring<br/>
@@ -58,26 +68,29 @@
         </p>
       </div>
       <div class="">
+        <ion-icon name="search" class="text-red text-5xl block"></ion-icon>
         <h2 class="text-2xl leading-loose font-medium">Free estimate</h2>
         <p>Not sure what the problem is? Contact us and we'll troubleshoot the issue. Want to know the costs before jumping into the repair? We'll give you an estimate <span class="font-bold">for free.</span></p>
       </div>
       <div class="">
+        <ion-icon name="power" class="text-red text-5xl block"></ion-icon>
         <h2 class="text-2xl leading-loose font-medium">Electrical appliances</h2>
         <p>Faulty or broken home appliances? Electric fans, washing machines&mdash;hey, as long as they run on electricity
           <span class="text-sm">(and not on some Wakandan Vibranium or an infinity stone)</span> we'll fix it for you.
         </p>
       </div>
       <div class="">
+        <ion-icon name="home" class="text-red text-5xl block"></ion-icon>
         <h2 class="text-2xl leading-loose font-medium">Home service</h2>
         <p>Near the area but unable to bring your car/appliance to the shop? We'll come and bring our services to your home</p>
       </div>
     </div>
   </section>
-  <section class="bg-blue text-gray-200">
+  <section class="bg-lt-blue text-gray-200">
     <div class="flex flex-col md:flex-row md:max-w-5xl md:mx-auto md:min-h-[32rem]">
       <div class="text-gray-200 mx-6 my-10 w-full self-center text-center md:w-1/3">
-        <h2 class="mx-6 text-2xl leading-loose md:text-right md:m-0 font-medium">Visit us at</h2>
-        <p class="mx-6 leading-relaxed md:text-right md:m-0">2157 Road 12<br/>Fabie Estate<br/>San Andres Bukid, Manila</p>
+        <h2 class="mx-6 text-2xl leading-loose font-medium">Visit us at</h2>
+        <p class="mx-6 leading-relaxed">2157 Road 12<br/>Fabie Estate<br/>San Andres Bukid, Manila</p>
       </div>
       <div class="w-full md:w-2/3 bg-stone-500 min-h-[20rem]">
         {{ partial "map.html" . }}
