--- a/layouts/index.html
+++ b/layouts/index.html
@@ -105,7 +105,7 @@
       </div>
     </div>
   </section>
-  <footer class="p-8 py-10 bg-slate-600 text-gray-200">
+  <footer class="p-8 py-10 bg-stone-600 text-gray-200">
     <p class="text-sm text-center">&copy; 2022 | Made with Hugo and Tailwind CSS</p>
   </footer>
 </main>
