--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,14 @@
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Road 12 Auto Electrical Services</title>
+<meta name="description" content="Road 12 Auto Electrical Services is your friendly neighborhood shop for all your auto electrical servicing and repairs. We offer a wide range of electrical services from general wiring, wiring harness restoration to troubleshooting. We repair home electric appliances too!" />
+<meta property="og:description" content="Road 12 Auto Electrical Services is your friendly neighborhood shop for all your auto electrical servicing and repairs. We offer a wide range of electrical services from general wiring, wiring harness restoration to troubleshooting. We repair home electric appliances too!" />
+<meta property="og:title" content="Road 12 Auto Electrical Services" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="https://r12autoelectrical.onrender.com/road12-cover.jpg" />
+<meta property="og:url" content="https://r12autoelectrical.onrender.com" />
+<meta name="twitter:card" content="summary_large_image" />
 
 {{ $styles := resources.Get "/css/style.css" | postCSS }}
 
