--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,6 +10,11 @@
 <meta property="og:url" content="https://r12autoelectrical.onrender.com" />
 <meta name="twitter:card" content="summary_large_image" />
 
+<link rel="icon" href="/favicon-32.png" sizes="32x32">
+<link rel="icon" href="/favicon-128.png" sizes="128x128">
+<link rel="icon" href="/favicon-192.png" sizes="192x192">
+<link rel="apple-touch-icon" href="/favicon-180.png" sizes="180x180">
+
 {{ $styles := resources.Get "/css/style.css" | postCSS }}
 
 {{ if .Site.IsServer }}
