Add link to facebook page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -44,6 +44,11 @@
         </h2>
         <p class="text-2xl font-bold">8 AM &ndash; 5 PM</p>
         <p class="mb-2 text-xl">Monday to Saturday</p>
+        <a href="https://www.facebook.com/Road-12-Auto-Electrical-Services-103187512424653" target="_blank" class="flex justify-center items-center gap-1 rounded-full h-14 p-2 w-full my-4 mx-auto bg-white text-blue font-medium">
+          Visit our
+          <ion-icon name="logo-facebook" class="text-4xl block"></ion-icon>
+          page
+        </a>
       </div>
       <div class="px-6 py-10 md:h-full md:flex md:flex-col md:items-center md:justify-start">
         <h2 class="text-xl leading-loose font-medium">
