--- a/layouts/index.html
+++ b/layouts/index.html
@@ -114,8 +114,9 @@
       </div>
     </div>
   </section>
-  <footer class="p-8 py-10 bg-stone-600 text-gray-200">
-    <p class="text-sm text-center">&copy; 2022 | Made with Hugo and Tailwind CSS</p>
+  <footer class="flex justify-center items-center p-8 py-10 bg-stone-700 text-gray-200">
+    <p class="text-sm text-center">&copy; 2022 Road 12 Auto Electrical Services&nbsp;|&nbsp;</p>
+    <a href="https://github.com/frytzrazal/road12-electrical" target="_blank" title="Website code" class="text-xl flex"><ion-icon name="logo-octocat"></ion-icon></a>
   </footer>
 </main>
 {{ end }}
