--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,4 +8,7 @@
     font-family: 'Inter', system-ui, sans-serif;
     scroll-behavior: smooth;
   }
+  ion-icon {
+    pointer-events: none;
+  }
 }
