add google site verification meta

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ .Language.Lang }}">
+<meta name="google-site-verification" content="Gm_NgTTLFg1kxPIczg98GGafQKfiGJbvTniT0ju7uKM" />
 
 <head>
   {{ partial "head.html" . }}
